1.k8s_basic/2.multi_pod/nginx_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: dmsrud-ns  # 네임스페이스 지정시, 여기에 지정
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-nginx
  template:
    metadata:
      labels:
        app: my-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest #1.22.1 latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: my-service      # 클러스트 내에서 서비스의 이름은 url주소(엔드포인트로 사용 ex)http://my-service:포트번호))로 사용되므로 유일해야함
  namespace: dmsrud-ns  # 네임스페이스 지정시, 여기에 지정
spec:
  type: ClusterIP  # 안적어도 기본값이 ClusterIP
  ports:
  # port는 서비스의 포트번호, targetPort는 pod내에 컨테이너의 포트번호(내부포트)
  - port: 8080
    targetPort: 8080
    # seielector .app는 pod의 라벨명과 일치해야 매핑이 됨
  selector:
    app: my-ordersystem  #라벨명
